downgrade-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-obj-create
spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    ports:
    - containerPort: 80
