nginx-rsyslog-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-rsyslog-pod
spec:
  containers:
  - name: nginx-rsyslog-pod
    image: nginx
  nodeName: k8s-5177-node-01   # ensures placement on a specific node
