nginx-test-daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-test
spec:
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - image: 127.0.0.1:30500/alta3/nginx_test
        name: nginx-test
