no-scheduler.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-sched
spec:
  containers:
  - name: nginx-no-sched
    image: nginx
  nodeName: k8s-5177-node-03
