simpleservice.yaml
---
apiVersion: v1  # the version number
kind: Pod
metadata: 
  name: simpleservice
  labels: 
    name: simpleservice-web
spec: 
  containers: 
  -
    name: simpleservice-web
    image: mhausenblas/simpleservice:0.5.0
    ports: 
      -
        name: web
        containerPort: 9876
        protocol: TCP
    readinessProbe:
      httpGet:
        path: /health
        port: 9876
      periodSeconds: 2
      failureThreshold: 3
      successThreshold: 1
