network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-1
  namespace: test
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: client
  podSelector:
    matchLabels:
      run: nginx
  policyTypes:
  - Ingress
  - Egress
